--- a/camel/pom.xml
+++ b/camel/pom.xml
@@ -1,33 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <artifactId>camel</artifactId>
 
-    <groupId>why</groupId>
-    <artifactId>camel</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <dependencies>
+    <dependency>
+      <artifactId>camel-spring-boot-starter</artifactId>
+      <groupId>org.apache.camel.springboot</groupId>
+    </dependency>
 
-    <dependencyManagement>
-
-        <dependencies>
-            <!-- Camel BOM -->
-            <dependency>
-                <groupId>org.apache.camel.springboot</groupId>
-                <artifactId>camel-spring-boot-bom</artifactId>
-                <version>3.14.0</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <!-- ... other BOMs or dependencies ... -->
-        </dependencies>
-
-    </dependencyManagement>
+    <dependency>
+      <artifactId>camel-quartz</artifactId>
+      <groupId>org.apache.camel</groupId>
+    </dependency>
+  </dependencies>
+  <dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-spring-boot-starter</artifactId>
-        </dependency>
+      <!-- Camel BOM -->
+      <dependency>
+        <artifactId>camel-spring-boot-bom</artifactId>
+        <groupId>org.apache.camel.springboot</groupId>
+        <scope>import</scope>
+        <type>pom</type>
+        <version>3.14.0</version>
+      </dependency>
+      <!-- ... other BOMs or dependencies ... -->
+      <!-- Add Camel BOM -->
+      <dependency>
+        <artifactId>camel-bom</artifactId>
+        <groupId>org.apache.camel</groupId>
+        <scope>import</scope>
+        <type>pom</type>
+        <version>3.14.0</version>
+      </dependency>
     </dependencies>
+
+  </dependencyManagement>
+  <groupId>why</groupId>
+
+  <modelVersion>4.0.0</modelVersion>
+
+  <version>1.0-SNAPSHOT</version>
 </project>
